2005-06-12  Daniel Jacobowitz  <dan@codesourcery.com>

	Backport from mainline:
	2005-06-01  Maciej W. Rozycki  <macro@linux-mips.org>
	* config/tc-mips.c (load_register): Add leading "0x" to the
	output of sprintf_vma().
	(macro): Likewise.

2005-06-08  Kazuhiro Inaoka <inaoka.kazuhiro@renesas.com>

	* config/tc-m32r.c (use_parallel): Change default value from 1 to 0.

2005-05-19  Jan Beulich  <jbeulich@novell.com>

	* config/tc-ia64.c (dot_endp): Don't use global symbol for unwind
	relocations in unwind section.

2005-05-17  Daniel Jacobowitz  <dan@codesourcery.com>

	Backport from mainline:
	2005-05-05  Nick Clifton  <nickc@redhat.com>
	* config/tc-arm.c (arm_opts): Make -mlittle-endian switch set
	the target_big_endian variable to false.

2005-05-17  Daniel Jacobowitz  <dan@codesourcery.com>

	* doc/Makefile.am (gasver.texi): Don't use $<.
	* doc/Makefile.in: Regenerated.

2005-05-02  Daniel Jacobowitz  <dan@codesourcery.com>

	* doc/Makefile.am (gasver.texi): Correct quoting.
	* doc/Makefile.in: Regenerated.

2005-04-29  Daniel Jacobowitz  <dan@codesourcery.com>

	* doc/Makefile.am (gasver.texi): Depend on bfd/configure instead
	of Makefile.
	(DISTCLEANFILES): Remove.
	(MAINTAINERCLEANFILES): Add asconfig.texi.
	* doc/Makefile.in: Regenerated.

2005-04-28  Christian Groessler  <chris@groessler.org>

	* config/tc-z8k.c (md_assemble): Fix buffer overrun in operand[]
	array.

2005-04-20  Nick Clifton  <nickc@redhat.com>

	* config/tc-mips.c (macro): Use sprintf_vma to convert a > 32 bit
	number into a readable string.
	(load_register): Likewise.

2005-04-20  Jan Beulich  <jbeulich@novell.com>

	PR/847
	* config/tc-ia64.c (ia64_canonicalize_symbol_name): Re-allow zero-
	length symbols.

2005-04-18  Maciej W. Rozycki  <macro@linux-mips.org>

	* config/tc-mips.c (normalize_constant_expr): Don't check for
	HAVE_32BIT_GPRS.
	(check_absolute_expr): Only call normalize_constant_expr() if
	HAVE_32BIT_GPRS.
	(mips_ip): Likewise.
